@@ -1,6 +1,9 @@
 Changelog for logilab database package
 ======================================
 
+--
+* new SUBSTRING function
+
 2010-03-18  --  1.0.1
     * remove non existant test/data dir from __pkginfo__.includes_dir
 
